--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-name: "Pianfan's blog"
-description: "翩帆的个人技术博客"
+name: "Zitao Liu"
 
 avatar: https://pianfan.github.io/images/avatar.png
 favicon: https://pianfan.github.io/images/favicon.ico
