--- a/_config.yml
+++ b/_config.yml
@@ -17,16 +17,16 @@ excerpt_separator: <!-- more -->
 
 footer-links:
   zhihu: 
-  email: xiongyunhan@outlook.com
+  email: liuzt1985@gmail.com
   facebook:
-  github: pianfan
+  github: windlao
   rss: # just type anything here for a working RSS icon
   twitter: 
   youtube:
 
-footer-text: Copyright (c) 2024 Pianfan
+footer-text: Copyright (c) 2024 Windlao
 
-url: https://pianfan.github.io
+url: https://windlao.github.io
 
 permalink: /:title/
 paginate_path: /page:num/
