--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: "Zitao Liu"
 description: undergraduate student in Harbin Institude of Technology(shen zhen)
-avatar: https://pianfan.github.io/images/avatar.png
+avatar: https://windlao.github.io/images/photo.jpg
 favicon: https://pianfan.github.io/images/favicon.ico
 
 navigation:
